# dagrun.py

./: .gitignore  LICENSE.txt  Makefile  README.adoc  dagrun.py  dagrun_install.py  example.py  pyproject.toml  requirements-dev.txt
dags/: git_push.py  setup_dev.py
